// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should alter rgba color and opacity in a complex value 1`] = `
"
div {
  color: rgba(0,0,0,0.5);
  border: 1px solid rgba(255,255,255,1);
  outline: 1px solid rgba(255,0,0,1);
}
"
`;

exports[`should alter rgba color in a complex value 1`] = `
"
div {
  color: rgba(255,0,0,1);
  border: 1px solid rgba(255,255,255,1);
  outline: 1px solid rgba(255,0,0,1);
}
"
`;

exports[`should alter rgba colors 1`] = `
"
div {
  color: rgba(255,0,0,1);
}
"
`;
